--- a/Toxic_comment_classification.ipynb
+++ b/Toxic_comment_classification.ipynb
@@ -397,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a224115c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a27b6acf8>"
       ]
      },
      "execution_count": 8,
@@ -445,7 +445,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a16b39898>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1c7f5978>"
       ]
      },
      "execution_count": 10,
@@ -606,8 +606,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 51s, sys: 1.59 s, total: 2min 53s\n",
-      "Wall time: 3min 6s\n"
+      "CPU times: user 2min 42s, sys: 603 ms, total: 2min 43s\n",
+      "Wall time: 2min 44s\n"
      ]
     }
    ],
@@ -991,8 +991,8 @@
      "output_type": "stream",
      "text": [
       "Test accuracy is 0.9074056706993029\n",
-      "CPU times: user 1min 17s, sys: 1.65 s, total: 1min 18s\n",
-      "Wall time: 1min 17s\n"
+      "CPU times: user 1min 20s, sys: 1.9 s, total: 1min 22s\n",
+      "Wall time: 1min 24s\n"
      ]
     }
    ],
